src/test/compile-fail/bad-module.rs
// error-pattern: unresolved import
import thing;

fn main() { let foo = thing::len([]); }
